# simple-menu

./: generate_zipapp.sh  pyproject.toml  readme.md
examples/: menu_external.sh  menu_inline.sh  simple-menu.toml
examples/example1/: item1.sh  item2.sh  item3.sh  menu.sh
examples/example2/: menu1.sh  menu2.sh  menu3.sh  menu4.sh
scripts/: helper
src/simple_menu/: __main__.py  configuration.py  constants.py  interface.py  main.py  sudo_helper.py
src/simple_menu/item/: base.py  item.py  item_external.py  items.py  menu.py  menu_external.py  menu_inline.py  sound.py  syncthing.py  systemd.py  zerotier.py
src/simple_menu/modules/: pipewire.py  syncthing.py
